--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <div class="scroll-up-btn">
@@ -50,7 +50,7 @@
     <!-- about section start -->
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">About us</h2>
+            <h2 class="title animate-bounce">About us</h2>
             <div class="about-content">
                 <div class="column left">
                     <img src="images/profile-1.jpeg" alt="">
