--- a/index.html
+++ b/index.html
@@ -154,22 +154,22 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-1.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Fetouaki Younes</div>
+                        <p>Head of the crew with astonishing leadership qualities.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Tahiri Oussama</div>
+                        <p>The designer and the full-stack web developer.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <div class="text">Achack Youness</div>
+                        <p>The advertising and marketing head and the full-stack developer.</p>
                     </div>
                 </div>
                 <!-- <div class="card">
@@ -250,7 +250,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="#">TechTriadCrew</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="#">TechTriadCrew</a> | <span class="far fa-copyright"></span> 2024 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
