--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">App & Web Design</div>
-                        <p>TechTriad Crew specializes in sleek app and web designs, with a focus on powerful backend development using Node.js, JavaScript, and Python. Let's bring your vision to life. Contact us today.</p>
+                        <p>TechTriad Crew specializes in sleek app and web designs, with a focus on powerful backend development. Let's bring your vision to life. Contact us today.</p>
                     </div>
                 </div>
                 <div class="card">
@@ -86,8 +86,8 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Crafting exceptional app experiences is our specialty. Contact us today to discuss your app design needs.</p>
+                        <div class="text">Apps Developing</div>
+                        <p>Crafting exceptional app experiences is our specialty. Contact us today to discuss your app developement needs.</p>
                     </div>
                 </div>
                </div>
@@ -116,7 +116,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>60%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
@@ -130,7 +130,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>PHP</span>
-                            <span>50%</span>
+                            <span>60%</span>
                         </div>
                         <div class="line php"></div>
                     </div>
